# send-wt-to-kindle

./: .gitignore  LICENSE  README.md  flake.nix  script.py  send-wt-to-kindle.cabal
.github/workflows/: send-watchtower.yml
app/: Main.hs
